UI styling done

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Trees Image - Pexels: https://www.pexels.com/photo/photo-of-trees-in-forest-3801030/ */
+/* Background Image - Unsplash: https://images.unsplash.com/photo-1490358930084-2d26f21dc211? */
 @import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
 
 html {
@@ -13,11 +13,12 @@ html {
 }
 
 body {
-  margin: 0;
-  background: url("./trees.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),
+    url("./minimal-background.jpg");
   background-size: cover;
   background-position: 50% 60%;
   background-attachment: fixed;
+  margin: 0;
   color: white;
   font-family: Quicksand, sans-serif;
   overflow-y: hidden;
@@ -50,11 +51,15 @@ ul {
 
 /* Columns */
 .drag-column {
-
+  flex: 1;
   margin: 0 10px;
   position: relative;
-  background-color: rgba(0, 0, 0, 0.4);
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 2px 2px 4px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   overflow-x: hidden;
 }
 
@@ -89,7 +94,7 @@ ul {
 /* Custom Scrollbar */
 .custom-scroll {
   overflow-y: auto;
-  max-height: 75vh;
+  max-height: 52vh;
 }
 
 .custom-scroll::-webkit-scrollbar-track {
