--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ html {
 }
 
 :root {
-  --column-1: #a2622d;
-  --column-2: #1b6161;
-  --column-3: #248224;
-  --column-4: #a22d22;
+  --column-1: #eb7413;
+  --column-2: #1a8ad4;
+  --column-3: #0caa0c;
+  --column-4: #f02f1d;
 }
 
 body {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)),
     url("./minimal-background.jpg");
   background-size: cover;
   background-position: 50% 60%;
@@ -56,8 +56,8 @@ ul {
   position: relative;
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 2px 2px 4px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   overflow-x: hidden;
